--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -9,7 +9,7 @@
     display: inline-block;
     margin-left: 6px;
     font-size: 1.5rem;
-    color:  #033d5c;
+    color:  #1c3a6b;
     padding-top: 20px;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .link-box {
-    border: solid 1px #033d5c;
+    border: solid 1px #1c3a6b;
   }
 
 .navbar {
